--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="Log.js"></script>
     <script src="Bird.js"></script>
     <script src="Slingshot.js"></script>
+    <script src="Pig2.js"></script>
+    <script src="Pig3.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 </head>
